--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -12,7 +12,12 @@
         'footer	 		footer 		footer';
 
 }
-
+.carrito-container{
+    padding-top: 7%;
+    padding-left: 90%;
+    // position: fixed;
+    margin-bottom: 0%;
+}
 .categorias-productos-container {
     margin-top: 40px;
     grid-area: categorias-productos-container;
@@ -81,6 +86,83 @@
         text-decoration: none;
         border: solid 1px black;
         color: rgb(0, 0, 0);
+    }
+
+}
+.btn-prod3 {
+    height: 40px;
+    font-size: 20px;
+    font-family: 'Oswald', sans-serif;
+    color: rgb(104, 104, 104);
+    border-color: solid 1px black;
+    background-color: rgb(255, 255, 255);
+    transition: 0.5s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    &:hover {
+        text-decoration: none;
+        color: rgb(104, 104, 104);
+       
+    }
+}
+.cantidad-container{
+
+    height: 40px;
+    font-size: 20px;
+    font-family: 'Oswald', sans-serif;
+    color: rgb(0, 0, 0);
+    border-color: solid 1px black;
+    background-color: rgb(255, 255, 255);
+    transition: 0.5s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+}
+.cant {
+    height: 40px;
+    width: 40px;
+    font-size: 20px;
+    font-family: 'Oswald', sans-serif;
+    color: rgb(0, 0, 0);
+    border-color: solid 1px black;
+    background-color: rgb(255, 255, 255);
+    transition: 0.5s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+
+
+    &:hover {
+        background-color: rgb(255, 255, 255);
+        text-decoration: none;
+        color: rgb(0, 0, 0);
+    }
+
+}
+.btn-cant {
+    height: 40px;
+    width: 40px;
+    font-size: 20px;
+    font-family: 'Oswald', sans-serif;
+    color: rgb(0, 0, 0);
+    border-color: solid 1px black;
+    background-color: rgb(255, 255, 255);
+    transition: 0.5s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+
+
+    &:hover {
+        background-color: rgb(255, 255, 255);
+        text-decoration: none;
+        border: solid 1px black;
+        color: rgb(108, 175, 153);
     }
 
 }
